[tool.poetry]
name = "pycraft"
version = "0.1.0"
description = "A Minecraft-like game built with Pygame and OpenGL"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
PyOpenGL = "^3.1.6"
numpy = "^1.24.3"
Pillow = "^9.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"